--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,10 @@
-
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap");
 
 $primary: rgb(111, 0, 255);
 
 body {
   margin: 0;
-  font-family: 'Nunito', 'sans-serif';
+  font-family: "Nunito", "sans-serif";
   font-size: 18px;
 }
 
@@ -46,4 +45,6 @@ header {
   }
 }
 
-h1 {margin-top: 1em;}
+h1 {
+  margin-top: 1em;
+}
