--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,1 +1,9 @@
-<p>list works!</p>
+<h1>Brewries</h1>
+
+<ul *ngIf="brews">
+  <li *ngFor="let brew of brews">
+    <p class="name">{{ brew.name }}</p>
+    <p class="country">{{ brew.name }}</p>
+    <a href="{{ brew.website_url }}" class="name">site</a>
+  </li>
+</ul>
